--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -1,4 +1,6 @@
-/*Homepage*/
+/*Homepage Stylesheet
+Riley Karp
+11/4/2017*/
 html {
     height: 100%;
 }
@@ -11,6 +13,77 @@ body {
   background-repeat: no-repeat;
 }
 
-h1, p {
+h1{
   color: #FFFFFF;
+  font-weight: bold;
+  font-size: 150px;
+  text-align: center;
+}
+
+p {
+  color: #FFFFFF;
+}
+
+footer {
+  color: white;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #000080;
+  padding: 10px 10px;
+  font-size: 12px
+}
+
+a {
+  text-decoration: none;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+
+a:hover {
+  color: #000080;
+}
+
+section {
+  border-radius: 5px;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  border: 2px solid #FFFFFF;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 25%;
+  font-size: 60px;
+  margin: 1.5%;
+  text-align: center;
+}
+
+section:hover {
+  color: #000080;
+  border: 5px solid #000080;
+}
+
+#about {
+  float: left;
+  position: relative;
+  left: 20%;
+}
+
+#dali {
+  float: left;
+  position: relative;
+  left: 25%;
+}
+
+#hobbies {
+  float: left;
+  position: relative;
+  left: 25%;
+}
+
+#resume {
+  float: left;
+  position: relative;
+  left: 20%;
 }
