--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,5 +1,6 @@
 /* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
   License: none (public domain)
+  Edited by Riley Karp 11/4/2017
 */
 
 html, body, div, span, applet, object, iframe,
@@ -44,4 +45,16 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+/* My addition */
+footer {
+  color: white;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #000080;
+  padding: 10px 10px;
+  font-size: 12px
 }
