--- a/stylesheets/footer.css
+++ b/stylesheets/footer.css
@@ -1,10 +1,10 @@
 /*Footer Stylesheet
 Riley Karp
-11/4/2017*/
+11/5/2017*/
 
 /*Footer*/
 footer {
-  color: white;
+  color: #FFA07A;
   position: fixed;
   left: 0;
   bottom: 0;
