--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -8,15 +8,15 @@ html {
 /*Background gradient*/
 body {
   background: #000080;
-  background: -webkit-linear-gradient(to right bottom, #000080, #FFA07A);
-  background:    -moz-linear-gradient(to right bottom, #000080, #FFA07A);
-  background:         linear-gradient(to right bottom, #000080, #FFA07A);
+  background: -webkit-linear-gradient(#000080, #FFA07A);
+  background:    -moz-linear-gradient(#000080, #FFA07A);
+  background:         linear-gradient(#000080, #FFA07A);
   background-repeat: no-repeat;
 }
 
 /*Name*/
 h1 {
-  color: #FFFFFF;
+  color: #FFA07A;
   font-weight: bold;
   font-size: 150px;
   text-align: center;
@@ -24,62 +24,70 @@ h1 {
   top: 75px;
 }
 
+p {
+  color: #FFA07A;
+  font-size: 30px;
+  text-align: center;
+  position: relative;
+  top: 100px;
+}
+
 /*Links*/
 a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #000080;
   font-weight: bold;
 }
 
 a:hover {
-  color: #000080;
+  color: #FFFFFF;
 }
 
 /*Buttons*/
 section {
   border-radius: 5px;
-  color: #FFFFFF;
+  color: #000080;
   cursor: pointer;
-  display: inline-block;
-  border: 2px solid #FFFFFF;
+  /*display: inline-block;*/
+  border: 2px solid #000080;
   padding-top: 10px;
   padding-bottom: 10px;
-  width: 25%;
-  font-size: 60px;
+  width: 20%;
+  font-size: 40px;
   margin: 1.5%;
   text-align: center;
 }
 
 section:hover {
-  color: #000080;
-  border: 5px solid #000080;
+  color: #FFA07A;
+  border: 5px solid #FFA07A;
 }
 
 /*Button Positions*/
 #about {
   float: left;
   position: relative;
-  left: 20%;
-  top: 75px;
+  left: 27.5%;
+  top: 110px;
 }
 
 #dali {
   float: left;
   position: relative;
-  left: 25%;
-  top: 75px;
+  left: 27.5%;
+  top: 110px;
 }
 
 #hobbies {
   float: left;
   position: relative;
-  left: 25%;
+  left: 27.5%;
   top: 50px;
 }
 
 #resume {
   float: left;
   position: relative;
-  left: 20%;
+  left: 27.5%;
   top: 50px;
 }
