--- a/stylesheets/subpage.css
+++ b/stylesheets/subpage.css
@@ -24,15 +24,15 @@ h1 {
 p {
   font-size: 20px;
   font-weight: bold;
-
   text-align: center;
   line-height: 125%;
   margin-left: 10%;
   margin-right: 10%;
+  margin-bottom: 8%;
 }
 
 /*Links*/
-.bio {
+.para {
   float: none;
   text-decoration: none;
   color: white;
@@ -42,6 +42,6 @@ p {
   display: inline;
 }
 
-.bio:hover {
+.para:hover {
   background: white;
 }
